Update to Vendure v1.0

--- a/src/plugins/reviews/ui/components/product-reviews-list/product-reviews-list.component.scss
+++ b/src/plugins/reviews/ui/components/product-reviews-list/product-reviews-list.component.scss
@@ -10,6 +10,6 @@
     align-items: center;
     padding: 12px;
     margin-right: 6px;
-    background-color: $color-grey-200;
+    background-color: var(--color-grey-200);
 }
 
