--- a/src/plugins/reviews/ui/components/review-histogram/review-histogram.component.scss
+++ b/src/plugins/reviews/ui/components/review-histogram/review-histogram.component.scss
@@ -11,17 +11,17 @@
 }
 
 .bar {
-    background-color: $color-grey-200;
+    background-color: var(--color-grey-200);
     width: 100px;
     margin: 0 6px;
 }
 .fill {
-    background-color: $color-star-rating;
+    background-color: var(--color-star-rating);
     text-align: right;
     height: 12px;
 }
 .frequency {
-    color: $color-grey-600;
+    color: var(--color-grey-600);
     font-size: 12px;
     min-width: 16px;
     line-height: 12px;
@@ -35,7 +35,7 @@
         cursor: default;
     }
     &.active {
-        background-color: $color-primary-500;
+        background-color: var(--color-primary-500);
         color: white;
     }
 }
