--- a/src/plugins/reviews/ui/components/review-state-label/review-state-label.component.scss
+++ b/src/plugins/reviews/ui/components/review-state-label/review-state-label.component.scss
@@ -3,12 +3,12 @@
 .state-icon {
     margin-right: 3px;
     &.new {
-        color: $color-warning-500;
+        color: var(--color-warning-500);
     }
     &.approved {
-        color: $color-success-500;
+        color: var(--color-success-500);
     }
     &.rejected {
-        color: $color-error-500;
+        color: var(--color-error-500);
     }
 }
