--- a/src/plugins/reviews/ui/components/star-rating/star-rating.component.scss
+++ b/src/plugins/reviews/ui/components/star-rating/star-rating.component.scss
@@ -1,5 +1,3 @@
-@import "../../reviews-ui";
-
 :host {
     display: flex;
     align-items: center;
@@ -9,6 +7,6 @@
 }
 
 clr-icon {
-    color: var(--color-star-rating);
+    color: #e1a904;
 }
 
